html basics task1 commit

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,14 +6,14 @@
 
 </head>
 <body>
-    <h1> The is the html basic web page </h1>
-    <p>Everything you find here is for the purpose of testing this web site. </p> 
+    <h1> This is the html basic web page </h1>
+    <p> Everything you find here is for the purpose of testing this web site. </p> 
     <h2> This is my introduction for html basics. </h2>
-    <p>  Html stands for Hyper Text Markup Language . </p>
-    <h3></h3>
-    <p></p>
-    <h4></h4>
-    <p></p> 
+    <p>  Html is a Markup Language for creating web page </p>
+    <h3> What is Html</h3>
+    <p>   Html stands for Hyper Text Markup Language
+    </p>
+    <p> Html is not a programing Language</p> 
 </body>
 
 
