--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,7 +13,9 @@
     <h3> What is Html</h3>
     <p>   Html stands for Hyper Text Markup Language
     </p>
-    <p> Html is not a programing Language</p> 
+    <p> Html is not a programing Language</p>
+    <p> <img src=" https://www.holbertonschool.com/holberton-logo.png"> </p>
+    
 </body>
 
 
