adding img commit2

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,8 +14,10 @@
     <p>   Html stands for Hyper Text Markup Language
     </p>
     <p> Html is not a programing Language</p>
-    <p> <img src=" https://www.holbertonschool.com/holberton-logo.png"> </p>
-    
+    <p> click the link 
+    <a> href img ="https://www.holbertonschool.com/holberton-logo.png"> </p>
+        holberton-logo
+
 </body>
 
 
