--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,7 +15,7 @@
     </p>
     <p> Html is not a programing Language</p>
     <p> click the link 
-    <a> href img ="https://www.holbertonschool.com/holberton-logo.png"> </p>
+    <a href img ="https://www.holbertonschool.com/holberton-logo.png"> </p>
         holberton-logo
 
 </body>
