--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,8 +15,8 @@
     </p>
     <p> Html is not a programing Language</p>
     <p> click the link 
-    <a href img ="https://www.holbertonschool.com/holberton-logo.png"> </p>
-        holberton-logo
+    <a href img ="https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg"> </p>
+        html-logo
 
 </body>
 
