--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,12 +14,12 @@
     <p>   Html stands for Hyper Text Markup Language
     </p>
     <p> Html is not a programing Language</p>
-    <p> click the link 
-    <a href img ="https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg"> </p>
+    
+    <p> <img src=" /Users/kenned/Desktop/Html logo.png">
         html-logo
-
+        
+    </p>
 </body>
-
 
 
 </html>
