clickable img link

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,9 +15,9 @@
     </p>
     <p> Html is not a programing Language</p>
     
-    <p> <img src=" /Users/kenned/Desktop/Html logo.png">
+    <p> <img src=" https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">
         html-logo
-        
+
     </p>
 </body>
 
