--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,8 +15,9 @@
     </p>
     <p> Html is not a programing Language</p>
     
-    <p> <img src=" https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">
-        html-logo
+    <p> Click the image below </p>
+        <a href = "# html"> <img src=" https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">
+        html-logo </a>
 
     </p>
 </body>
