--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,8 +18,9 @@
     <p> Click the image below </p>
         <a href = "# html"> <img src=" https://en.wikipedia.org/wiki/HTML#/media/File:HTML5_logo_and_wordmark.svg">
         html-logo </a>
-
-    </p>
+    <p> link to my favourite tweet.</p>
+<a href = "///Users/kenned/Alx_html_css/alx_html_css/html_basic/tweets.html"> html</a>
+    
 </body>
 
 
