--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -106,7 +106,12 @@
  </ul>
 </h4>
  <ul>
-    
+
+   <footer>
+    <p> 
+        Made by Aramide kehinde <a href="file:///Users/kenned/Alx_html_css/alx_html_css/html_basic/tweets.html" target="_blank">click here</a>
+    </p>
+</footer> 
     
 
 </body>
