--- a/html_basic/html_advanced/css_basic/index.html
+++ b/html_basic/html_advanced/css_basic/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="works_on_smartphone">
     <h1 class="logo"> This is the html basic web page
-        <a href="/Users/kenned/Alx_html_css/alx_html_css/html_basic/html_advanced/css_basic/image logo.jpg"><img src="image destination"></a>
+       <img src="image logo.jpg">
             <li>
                 <p> Everything you find here is for the purpose of testing this web site. </p>
 
