--- a/html_forms/0-contact-form.html
+++ b/html_forms/0-contact-form.html
@@ -6,7 +6,7 @@
     <title>Contact Form</title>
 </head>
 <body>
-    <form action="#" method="Post">
+    <form action="#" method="POST">
         <div>
             <label for="name">Name:</label>
             <input type="text" id="Name" name="Name"  required placeholder="Name here">
