--- a/html_forms/0-contact-form.html
+++ b/html_forms/0-contact-form.html
@@ -13,7 +13,7 @@
         </div>
         <div>
             <label for="email address">Email:</label>
-            <input type="text" id="Email" name="Email" required placeholder="Email Address here">
+            <input type="email" id="Email" name="Email" required placeholder="Email Address here">
         </div>
         <div>
             <label for="message">Message:</label>
