--- a/html_forms/1-registration-form.html
+++ b/html_forms/1-registration-form.html
@@ -13,7 +13,7 @@
         </div>
         <div>
             <label for="email">Email:</label>
-            <input type="text" id="email" name="Email" required>
+            <input type="email" id="email" name="Email" required>
         </div>
         <div>
             <label for="password">Password:</label>
