--- a/html_forms/1-registration-form.html
+++ b/html_forms/1-registration-form.html
@@ -17,11 +17,11 @@
         </div>
         <div>
             <label for="password">Password:</label>
-            <input type="text" id="password" name="Password" required>
+            <input type="password" id="password" name="Password" required>
         </div>
         <div>
             <label for="confirm password">Confirm password:</label>
-            <input type="text" id="confirm password" name="Confirm password" required>
+            <input type="password" id="confirm password" name="Confirm password" required>
         </div>
         <div>
             <button type="submit">Register</button>
