--- a/html_forms/2-subscription-form.html
+++ b/html_forms/2-subscription-form.html
@@ -6,6 +6,7 @@
     <title>Subscription form</title>
 </head>
 <body>
+    <hi>Subscription Form</hi>
     <form action="#" method="POST">
         <div>
             <label for="name">Name</label>
