--- a/html_forms/1-registration-form.html
+++ b/html_forms/1-registration-form.html
@@ -6,6 +6,7 @@
     <title>Registration form</title>
 </head>
 <body>
+    <hi>Registration Form</hi>
     <form action="#" method="POST">
         <div>
             <label for="name">Name:</label>
