--- a/html_forms/0-contact-form.html
+++ b/html_forms/0-contact-form.html
@@ -6,6 +6,7 @@
     <title>Contact Form</title>
 </head>
 <body>
+    <hi>Contact Form</hi>
     <form action="#" method="POST">
         <div>
             <label for="name">Name:</label>
