--- a/html_forms/1-registration-form.html
+++ b/html_forms/1-registration-form.html
@@ -6,7 +6,7 @@
     <title>Registration form</title>
 </head>
 <body>
-    <hi>Registration Form</hi>
+    <h1>Registration Form</h1>
     <form action="#" method="POST">
         <div>
             <label for="name">Name:</label>
