--- a/html_forms/2-subscription-form.html
+++ b/html_forms/2-subscription-form.html
@@ -6,7 +6,7 @@
     <title>Subscription form</title>
 </head>
 <body>
-    <hi>Subscription Form</hi>
+    <h1>Subscription Form</h1>
     <form action="#" method="POST">
         <div>
             <label for="name">Name</label>
