--- a/html_forms/3-feedback-form.html
+++ b/html_forms/3-feedback-form.html
@@ -6,7 +6,7 @@
     <title>Feedback and Checkboxes</title>
 </head>
 <body>
-    <hi>Feedback <Form></Form></hi>
+    <h1>Feedback <Form></Form></h1>
     <form action="#" method="POST" >
         <div>
             <label for="name">Name</label>
